Fix #315 button text nowrap

--- a/app/assets/stylesheets/orchid.scss
+++ b/app/assets/stylesheets/orchid.scss
@@ -144,6 +144,12 @@ a:focus {
   }
 }
 
+// Undoing Bootstrap 3.4's nowrap on .btn class,
+// which causes text to spill out of flex buttons
+
+.btn {
+  white-space: initial;
+}
 
 // Site Section-specific
 // =====================
